--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -5,23 +5,33 @@
   &__grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 40px;
-    img {
-      width: 340px;
-      height: 165px;
-    }
-    .blog-text {
-      text-align: center;
-      color: $titles-color;
-      margin-bottom: 10px;
-    }
-    .blog-span1 {
-      margin-left: 50px;
+    gap: 40px;
 
-      color: $titles-color;
-      .icon {
-        font-size: 14px;
+    &__post {
+      text-align: center;
+      
+      img {
+        width: 100%;
+        height: 165px;
+      }
+
+      .blog-text {
+        text-align: center;
+        color: $titles-color;
+        margin-bottom: 10px;
+      }
+
+      .blog-span1 {
+        margin-left: 50px;
+
+        color: $titles-color;
+
+        .icon {
+          font-size: 14px;
+        }
       }
     }
+
+
   }
 }
