--- a/sass/layout/_menu-image.scss
+++ b/sass/layout/_menu-image.scss
@@ -1,9 +1,9 @@
 .menu-image {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  
   img {
-    width: 378px;
+    width: 100%;
     height: 280px;
     object-fit: cover;
   }
